panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__string__test_backslash_newline.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/string/test_backslash_newline.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello\
 world")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello\
\
 world")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "\
hello world")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "\
\
hello world")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello world\
")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello world\
\
"))))))

----- stderr -----
