panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__string__test_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/string/test_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression (string "ignored string"))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "some string" " " "concatenated")))
         (declaration char_star~3 `ptr<char>` (string "char star"))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (name char_star~3 `ptr<char>`)))
         (declaration char_const_star~4 `ptr<char const>` (string "char const star"))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (name char_const_star~4 `ptr<char const>`)))
         (return (lengthof (string "string"))))))

----- stderr -----
