panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__string__test_string_literal_is_lvalue.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/string/test_string_literal_is_lvalue.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal_is_lvalue.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration hello~3 `ptr<typeof(`array<char; ∅>`)>` (addressof (string "hello")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (deref (name hello~3 `ptr<typeof(`array<char; ∅>`)>`))))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (addressof (deref (string "world"))))))))

----- stderr -----
