panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__string__test_string_literal_simple_escape_sequences.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/string/test_string_literal_simple_escape_sequences.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal_simple_escape_sequences.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%s\n")
               (string "abc\?\"'\\\'def")))
         (return (lengthof (string "\n"))))))

----- stderr -----
